Bug 1584898 - Free nsPipe memory on a separate thread, r=Ehsan

Differential Revision: https://phabricator.services.mozilla.com/D50278